flask_api_gateway/build/yamls/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api-gateway-dev
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: "flask-api-gateway-dev-service"
  template:
    metadata:
      labels:
        app: "flask-api-gateway-dev-service"
    spec:
      containers:
      - name: "flask-api-gateway"
        image: "flask-api-gateway:1.0.0"
        command: ["gunicorn", "-c", "gunicorn.py", "main:app"]
        imagePullPolicy: IfNotPresent
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 5001
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 5
        ports:
          - containerPort: 5001
