flask_api_gateway/build/yamls/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-gateway-dev-service-np
  labels:
    run: flask-api-gateway-dev-service
spec:
  selector:
    app: flask-api-gateway-dev-service
  type: NodePort
  ports:
    - name: flask-api-gateway-dev-service-port
      port: 5001
      targetPort: 5001
