flask_api_gateway/build/yamls/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flask-api-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: flask-api-gateway.local
      http:
        paths:
          - path: /
            backend:
              serviceName: flask-api-gateway-dev-service-np
              servicePort: 5001
